kuber/persistentVolume.yml
- apiVersion: v1
  kind: PersistentVolume
  metadata:
    name: MYAPP
  spec:
    capacity: 10Gi
    accessModes:
      - ReadWriteOnce # one client can mount for read/write
      - ReadOnlyMany # many clients can mount for read access
    persistentVolumeRelaimPolicy: Retain # retain even after claim is deleted (not erased/deleted)
    storageClassName: local-storage
    local:
      path: /data/storage
    nodeAffinity: # select the Node where the local storage PV is created
      required:
        nodeSelectorTerms:
          - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                  - <node-name>

- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: pvc-5g
  spec:
    accessModes:
      - ReadWriteOnce
    storageClassName: local-storage
    resources:
      requests:
        storage: 5Gi

- apiVersion: v1
  kind: Pod
  metadata:
    name: pod-uses-pvc-5g
    labels:
      name: storage
  spec:
    containers:
      - image: nginx
        name: az-c-01
        command:
          - /bin/sh
          - -c
          - while true; do echo $(date) >> /mnt/bloobdisk/outfile; sleep 1; done
  volumeMounts:
    - name: blobdisk01
      mountPath: /mnt/blobdisk
  volumes: # create volume that binds to PersistentVolumeClaim
    - name: blobdisk01
      persistentVolumeClaim:
        claimName: pvc-5g
