kuber/volume.example.yml
apiVersion: v1
kind: Pod
spec:
  volumes:
    - name: html # define volume
      emptyDir: {}
  containers:
    - name: nginx
      image: nginx:alpine
      volumeMounts: # reference to html colume and define a mountPath
        - name: html
          mountPath: /usr/share/nginx/html
          readOnly: true
    - name: html-updater
      image: alpine
      command: ["/bin/sh", "-c"]
      args:
        - while true; do date >> /html/index.html; sleep 10; done
      volumeMounts: # reference html volume  and define a mountPath
        - name: html
          mountPath: /html
