kuber/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: mongodb
  template: 
    metadata:
      labels:
        app: mongodb
    spec: 
      containers: 
      - name: mongodb
        image: mongo
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "200m" 
        ports:
        - containerPort: 27017
--- # new document yml's syntax

apiVersion: v1
kind: Service 
metadata: 
  name: mongodb-service
spec: 
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
